added all 3 bundle files to buildHtml.js

--- a/package.json
+++ b/package.json
@@ -5,22 +5,23 @@
   "main": "index.js",
   "repository": "https://github.com/TobiahRex/nj2jp.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "if test \"$NODE_ENV\" = \"production\" ; then npm run start-prod; else npm run start-dev; fi ",
-    "start-dev": "npm run open:dev",
-    "start-prod": "babel-node ./tools/distServer.js",
-    "open:dev": "babel-watch ./server/server.js",
-    "open:dist": "babel-node ./tools/distServer.js",
-    "remove-dist": "rimraf ./dist && mkdir dist",
+    "analyze-bundle": "NODE_ENV=production babel-node ./tools/analyzeBundle.js",
+    "build": "NODE_ENV=production npm-run-all build:bundle copy-images open:dist",
+    "build:html": "babel-node ./tools/buildHtml.js",
+    "build:bundle": "babel-node ./tools/build.js",
+    "clean:dist": "rimraf ./dist && mkdir dist",
+    "clean:src": "rimraf ./src/index.html",
     "copy-images": "copyfiles -u 1 './src/Images/**' ./dist/",
     "copy-package": "copyfiles 'package.json' ./dist/",
-    "prebuild": "npm run remove-dist",
-    "build:bundle": "babel-node ./tools/build.js",
+    "deploy-s3": "npm-run-all s3:clean s3:deploy",
+    "open:dev": "babel-watch ./server/server.js",
+    "open:dist": "babel-node ./tools/distServer.js",
+    "prebuild": "npm run clean:dist",
     "s3:clean": "aws s3 rm s3://nj2jp-react --recursive",
     "s3:deploy": "aws s3 sync dist/ s3://nj2jp-react",
-    "deploy-s3": "npm-run-all s3:clean s3:deploy",
-    "build": "NODE_ENV=production npm-run-all build:bundle copy-images open:dist",
-    "analyze-bundle": "NODE_ENV=production babel-node ./tools/analyzeBundle.js"
+    "start": "if test \"$NODE_ENV\" = \"production\" ; then npm run start-prod; else npm run start-dev; fi ",
+    "start-dev": "NODE_ENV=development npm-run-all clean:src build:html open:dev",
+    "start-prod": "babel-node ./tools/distServer.js"
   },
   "author": "Tobiah Rex",
   "license": "ISC",
