fixed production webpack build.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:html": "babel-node ./tools/buildHtml.js",
     "build:bundle": "babel-node ./tools/build.js",
     "clean:dist": "rimraf ./dist && mkdir dist",
-    "clean:src": "rimraf ./src/index.html",
+    "clean:src":`` "rimraf ./src/index.html",
     "copy-images": "copyfiles -u 1 './src/Images/**' ./dist/",
     "copy-package": "copyfiles 'package.json' ./dist/",
     "deploy-s3": "npm-run-all s3:clean s3:deploy",
@@ -20,7 +20,7 @@
     "s3:clean": "aws s3 rm s3://nj2jp-react --recursive",
     "s3:deploy": "aws s3 sync dist/ s3://nj2jp-react",
     "start": "if test \"$NODE_ENV\" = \"production\" ; then npm run start-prod; else npm run start-dev; fi ",
-    "start-dev": "NODE_ENV=development npm-run-all clean:src build:html open:dev",
+    "start-dev": "NODE_ENV=development npm-run-all open:dev",
     "start-prod": "babel-node ./tools/distServer.js"
   },
   "author": "Tobiah Rex",
@@ -36,6 +36,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-react-display-name": "^2.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-polyfill": "^6.23.0",
