--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,8 @@
       "plugins": [
         "transform-react-jsx-source",
         "transform-react-display-name",
-        "transform-export-extensions"
+        "transform-export-extensions",
+        "syntax-dynamic-import",
       ],
     },
     "production": {
@@ -19,7 +20,6 @@
         ["es2015", { "modules": false }],
         "stage-2"
       ],
-      "plugins": [],
     }
   }
 }
