--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:html": "babel-node ./tools/buildHtml.js",
     "build:bundle": "babel-node ./tools/build.js",
     "clean:dist": "rimraf ./dist && mkdir dist",
-    "clean:src":`` "rimraf ./src/index.html",
+    "clean:src": "rimraf ./src/index.html",
     "copy-images": "copyfiles -u 1 './src/Images/**' ./dist/",
     "copy-package": "copyfiles 'package.json' ./dist/",
     "deploy-s3": "npm-run-all s3:clean s3:deploy",
@@ -39,7 +39,7 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -100,6 +100,7 @@
     "babel-preset-react": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-2": "^6.22.0",
+    "babel-runtime": "^6.23.0",
     "compression": "^1.6.2",
     "express": "^4.15.2",
     "mobile-detect": "^1.3.5",
